# cicd-feature-test

./: CMakeLists.txt
.github/workflows/: run-test.yml
src/: CMakeLists.txt  app_info.cpp  app_info.hpp  main.cpp
